@@ -6,10 +6,12 @@ import com.guanyu.haigui.context.BaseContext;
 import com.guanyu.haigui.pojo.dto.CreateTurtleSoupDTO;
 import com.guanyu.haigui.pojo.dto.HaiGuiInfoGenerateDTO;
 import com.guanyu.haigui.pojo.dto.QueryTurtleSoupListDTO;
+import com.guanyu.haigui.pojo.dto.rejectTurtleSoupDTO;
 import com.guanyu.haigui.pojo.model.*;
 import com.guanyu.haigui.pojo.result.HaiGuiDetailResult;
 import com.guanyu.haigui.pojo.result.HaiGuiInfoResult;
 import com.guanyu.haigui.pojo.vo.AddAuditUserVO;
+import com.guanyu.haigui.pojo.vo.QueryMyTurtleSoupListVO;
 import com.guanyu.haigui.pojo.vo.QueryTurtleSoupListVO;
 import com.guanyu.haigui.repository.*;
 import lombok.AllArgsConstructor;
@@ -21,10 +23,13 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
@@ -49,20 +54,20 @@ public class AuditService {
         Long currentAdminId = BaseContext.getCurrentId();
 
         userInfoRepository.findById(currentAdminId)
-                .orElseThrow(() -> new BusinessException(404,"管理员不存在"));
-        
+                .orElseThrow(() -> new BusinessException(404, "管理员不存在"));
+
         // 检查当前用户是否具有管理员角色
         boolean isAdmin = sysUserRoleRepository.existsById(
                 new SysUserRole.UserRoleId(currentAdminId, UserRoleEnum.ADMIN.getRoleId())
         );
-        
+
         if (!isAdmin) {
             throw new BusinessException(403, "当前用户不是管理员，无权限执行此操作");
         }
 
         // 2. 验证目标用户存在
         UserInfo targetUser = userInfoRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException(404,"用户不存在"));
+                .orElseThrow(() -> new BusinessException(404, "用户不存在"));
 
 
         // 4. 检查用户是否已有该角色
@@ -126,25 +131,20 @@ public class AuditService {
         audit.setAuditorId(BaseContext.getCurrentId());
         audit.setAuditTime(LocalDateTime.now());
         haiGuiSoupAuditRepository.save(audit);
-        //向量化线索并进行存储
-        Map<Integer, Long> fragments = haiGuiSoupInfoService.convertToClueFragmentsAndSave(createTurtleSoupDTO.getFragments(),soup);
-        List<InferenceTask> tasks = haiGuiSoupInfoService.convertToInferenceTasks(createTurtleSoupDTO,soup,fragments);
-        if(fragments.isEmpty()||tasks.isEmpty()){
-            throw new BusinessException(500,"请检查线索和推理任务是否填写正确");
+        // 向量化线索并进行存储
+        Map<Integer, Long> fragments = haiGuiSoupInfoService.convertToClueFragmentsAndSave(createTurtleSoupDTO.getFragments(), soup);
+        List<InferenceTask> tasks = haiGuiSoupInfoService.convertToInferenceTasks(createTurtleSoupDTO, soup, fragments);
+        if (fragments.isEmpty() || tasks.isEmpty()) {
+            throw new BusinessException(500, "请检查线索和推理任务是否填写正确");
         }
         return "创建成功";
     }
 
     public QueryTurtleSoupListVO queryTurtleSoupList(QueryTurtleSoupListDTO dto) {
-        // 获取当前用户ID
-        Long uploaderId = BaseContext.getCurrentId();
-
         // 校验并修正页码参数
         int pageNum = dto.getPageNum() != null && dto.getPageNum() > 0 ? dto.getPageNum() : 1;
         int pageSize = dto.getPageSize() != null && dto.getPageSize() > 0 ? dto.getPageSize() : 10;
 
-
-        // 创建分页请求
         // 创建分页请求
         Pageable pageable = PageRequest.of(
                 pageNum - 1, // Spring Data页码从0开始
@@ -154,18 +154,32 @@ public class AuditService {
 
         // 执行分页查询
         Page<HaiGuiSoupAudit> pageResult;
-        if (dto.getSoupTitle() != null && !dto.getSoupTitle().isEmpty()) {
-            // 带标题搜索的查询
-            pageResult = haiGuiSoupAuditRepository.findByUploaderIdAndTitleContainingAndAuditStatus(
-                    uploaderId,
-                    dto.getSoupTitle(),
-                    dto.getAuditStatus() != null ?
-                            HaiGuiSoupAudit.AuditStatus.valueOf(dto.getAuditStatus()) : null,
-                    pageable
-            );
-        } else {
-            // 普通分页查询
-            pageResult = haiGuiSoupAuditRepository.findByUploaderId(uploaderId, pageable);
+        String title = dto.getSoupTitle();
+        String statusStr = dto.getAuditStatus();
+
+        try {
+            if (title != null && !title.isEmpty() && statusStr != null && !statusStr.isEmpty()) {
+                // 标题和状态都有值
+                HaiGuiSoupAudit.AuditStatus status = HaiGuiSoupAudit.AuditStatus.valueOf(statusStr);
+                pageResult = haiGuiSoupAuditRepository.findByTitleContainingAndAuditStatus(
+                        title, status, pageable);
+
+            } else if (title != null && !title.isEmpty()) {
+                // 只有标题
+                pageResult = haiGuiSoupAuditRepository.findByTitleContaining(title, pageable);
+
+            } else if (statusStr != null && !statusStr.isEmpty()) {
+                // 只有状态
+                HaiGuiSoupAudit.AuditStatus status = HaiGuiSoupAudit.AuditStatus.valueOf(statusStr);
+                pageResult = haiGuiSoupAuditRepository.findByAuditStatus(status, pageable);
+
+            } else {
+                // 无过滤条件 - 查询所有
+                pageResult = haiGuiSoupAuditRepository.findAll(pageable);
+            }
+        } catch (IllegalArgumentException e) {
+            // 状态枚举转换失败时使用无条件查询
+            pageResult = haiGuiSoupAuditRepository.findAll(pageable);
         }
 
         // 转换为VO
@@ -179,7 +193,7 @@ public class AuditService {
 
         List<QueryTurtleSoupListVO.TurtleSoupItem> items = page.getContent().stream()
                 .map(this::convertToItem)
-                .toList();
+                .collect(Collectors.toList());
 
         vo.setList(items);
         return vo;
@@ -191,7 +205,8 @@ public class AuditService {
         item.setSoupTitle(audit.getTitle());
         item.setSoupSurface(audit.getSurface());
         item.setAuditStatus(audit.getAuditStatus().name());
-        item.setCreateTime(audit.getCreatedAt().toString());
+        item.setCreateTime(audit.getCreatedAt() != null ?
+                audit.getCreatedAt().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) : "");
         return item;
     }
 
@@ -199,5 +214,117 @@ public class AuditService {
         HaiGuiSoupAudit audit = haiGuiSoupAuditRepository.findById(auditId)
                 .orElseThrow(() -> new BusinessException(404, "审核记录不存在"));
         return HaiGuiDetailResult.fromHaiGuiSoupAudit(audit);
+    }
+
+    public String rejectTurtleSoup(rejectTurtleSoupDTO rejectTurtleSoupDTO) {
+        HaiGuiSoupAudit audit = haiGuiSoupAuditRepository.findById(rejectTurtleSoupDTO.getAuditId())
+                .orElseThrow(() -> new BusinessException(404, "审核记录不存在"));
+        UserInfo userInfo = userInfoRepository.findById(BaseContext.getCurrentId())
+                .orElseThrow(() -> new BusinessException(404, "用户不存在"));
+        boolean userRole = sysUserRoleRepository.existsById(new SysUserRole.UserRoleId(userInfo.getUserId(), UserRoleEnum.SOUP_AUDITOR.getRoleId()));
+        if (!userRole) {
+            throw new BusinessException(403, "您不是审核员,无权限");
+        }
+        audit.setAuditStatus(HaiGuiSoupAudit.AuditStatus.REJECTED);
+        if (rejectTurtleSoupDTO.getReason() != null) {
+            audit.setAuditComment(rejectTurtleSoupDTO.getReason());
+        } else {
+            audit.setAuditComment("审核未通过");
+        }
+        audit.setAuditTime(LocalDateTime.now());
+        haiGuiSoupAuditRepository.save(audit);
+        return "拒绝已成功";
+    }
+
+    public QueryMyTurtleSoupListVO queryMyTurtleSoupList(QueryTurtleSoupListDTO dto) {
+        // 获取当前用户ID
+        Long uploaderId = BaseContext.getCurrentId();
+        if (uploaderId == null) {
+            throw new RuntimeException("用户未登录");
+        }
+
+        // 校验并修正页码参数
+        int pageNum = (dto.getPageNum() == null || dto.getPageNum() <= 0) ? 1 : dto.getPageNum();
+        int pageSize = (dto.getPageSize() == null || dto.getPageSize() <= 0) ? 10 : dto.getPageSize();
+
+        // 创建分页请求
+        Pageable pageable = PageRequest.of(
+                pageNum - 1, // Spring Data页码从0开始
+                pageSize,
+                Sort.by(Sort.Direction.DESC, "createdAt") // 按创建时间倒序
+        );
+
+        // 执行分页查询
+        Page<HaiGuiSoupAudit> pageResult;
+        String title = dto.getSoupTitle();
+        String statusStr = dto.getAuditStatus(); // 确保DTO中有此字段
+
+        try {
+            if (StringUtils.hasText(title) && StringUtils.hasText(statusStr)) {
+                // 标题和状态都有值
+                HaiGuiSoupAudit.AuditStatus status = HaiGuiSoupAudit.AuditStatus.valueOf(statusStr);
+                pageResult = haiGuiSoupAuditRepository.findByUploaderIdAndTitleContainingAndAuditStatus(
+                        uploaderId, title, status, pageable);
+
+            } else if (StringUtils.hasText(title)) {
+                // 只有标题
+                pageResult = haiGuiSoupAuditRepository.findByUploaderIdAndTitleContaining(
+                        uploaderId, title, pageable);
+
+            } else if (StringUtils.hasText(statusStr)) {
+                // 只有状态
+                HaiGuiSoupAudit.AuditStatus status = HaiGuiSoupAudit.AuditStatus.valueOf(statusStr);
+                pageResult = haiGuiSoupAuditRepository.findByUploaderIdAndAuditStatus(
+                        uploaderId, status, pageable);
+
+            } else {
+                // 无过滤条件
+                pageResult = haiGuiSoupAuditRepository.findByUploaderId(uploaderId, pageable);
+            }
+        } catch (IllegalArgumentException e) {
+            // 状态枚举转换失败时使用无条件查询
+            pageResult = haiGuiSoupAuditRepository.findByUploaderId(uploaderId, pageable);
+        }
+
+        // 转换为VO
+        return convertToMyVO(pageResult);
+    }
+
+    private QueryMyTurtleSoupListVO convertToMyVO(Page<HaiGuiSoupAudit> pageResult) {
+        QueryMyTurtleSoupListVO vo = new QueryMyTurtleSoupListVO();
+        vo.setTotal((int) pageResult.getTotalElements());
+        vo.setPages(pageResult.getTotalPages());
+
+        List<QueryMyTurtleSoupListVO.TurtleSoupItem> items = pageResult.getContent().stream()
+                .map(this::convertToMyItem)
+                .collect(Collectors.toList());
+
+        vo.setList(items);
+        return vo;
+    }
+
+    private QueryMyTurtleSoupListVO.TurtleSoupItem convertToMyItem(HaiGuiSoupAudit audit) {
+        QueryMyTurtleSoupListVO.TurtleSoupItem item = new QueryMyTurtleSoupListVO.TurtleSoupItem();
+
+        item.setAuditId(audit.getAuditId());
+        item.setSoupTitle(audit.getTitle());
+        item.setSoupSurface(audit.getSurface());
+        item.setSoupBottom(audit.getBottom());
+
+        // 修复标签显示问题
+        item.setSoupTags(audit.getTags() != null ? audit.getTags().getDescription() : "");
+
+        // 修复字段映射错误
+        item.setSoupEstimatedQuestions(audit.getDefaultMaxQuestions()); // 题目数量
+        item.setSoupDifficultyLevel(audit.getDifficultyLevel().name()); // 难度
+        item.setSoupPlayerCount(String.valueOf(audit.getPlayerCount())); // 玩家数量
+        item.setSoupEstimatedDuration(String.valueOf(audit.getEstimatedDuration())); // 时长
+
+        item.setAuditStatus(audit.getAuditStatus().name());
+        item.setRejectReason(audit.getAuditComment());
+        item.setCreateTime(audit.getCreatedAt() != null ?
+                audit.getCreatedAt().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) : "");
+
+        return item;
     }
 }
